# zero_shot_classification

./: README.md  pyproject.toml
.github/workflows/: main.yaml
scripts/: generate_compose.py  generate_nginx_conf.py  test_api.py
test_data/: cluster.json  images.yaml  weights.yaml
zero_shot_clf/: geracl_app.py  geracl_dockerfile  llm_app.py  vllm_dockerfile
zero_shot_clf/geracl_image/: Dockerfile  geracl_app.py
zero_shot_clf/vllm_image/: Dockerfile  llm_app.py
